Changelog
=========

4.4.3 (unreleased)
------------------

- Nothing changed yet.


4.4.2 (2018-12-12)
------------------

- Don't show "downloaded via" for reviews that use an external full text.
  #REC-984
- Support for adjusted CSS in separate accordion items on review view.
  #REC-984
- URL fields are no longer prepended with "http://". #REC-994


4.4.1 (2018-05-25)
------------------

- Redirect to the correct portal. Refs #16548


4.4.0 (2018-03-05)
------------------

- Metadata accordion: SVGs to replace GIFs. Refs #16175
  [reinhardt]
- Review view: Only show commenting button if commenting is enabled.
  Refs #16221
  [reinhardt]
- Licence can be entered on Volume, Issue and Review as well as on Publication.
  Licence text is treated as HTML.
  Refs #16194
  [reinhardt]
- Allow hiding URL in citation rules box. Also hide URL if external full text
  is used. Refs #16234
  [reinhardt]


4.3.2 (2018-01-18)
------------------

- Replaced Twitter button with new social media buttons. Refs #16159
  [reinhardt]


4.3.1 (2017-11-16)
------------------

- Review view: Don't break if certain attributes are missing (as with
  presentations). Refs #15982
  [reinhardt]


4.3.0 (2017-09-21)
------------------

- Allow showing external link instead of directly using full text. Refs #15625
  [reinhardt]
- Added extra fields for ebooks. Refs #15676
  [reinhardt]
- Added field "PPN". Refs #15431
  [reinhardt]
- Insert portal title into "downloaded via" note in citation. Refs #15448
  [reinhardt]


4.2.1 (2017-06-12)
------------------

- Removed 'rel' attribute from citation. Fixes PDF generation. Refs #15189
  [reinhardt]


4.2.0 (2017-03-30)
------------------

- Show DOI in citation. Refs #13714
  [reinhardt]


4.1.1 (2017-01-27)
------------------

- Added toggle for using canonical_uri in BVID export, refs #14156
  [reinhardt]


4.1.0 (2017-01-27)
------------------

- TÃ¶chter, refs #13569, #13568
  [reinhardt]


4.0.1 (2016-05-23)
------------------
